# routines

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  cortex.toml
crates/routines-cli/: Cargo.toml
crates/routines-cli/src/: main.rs
crates/routines-cli/src/cmd/: attach.rs  daemon.rs  list.rs  log.rs  mcp.rs  mod.rs  ps.rs  registry.rs  run.rs  serve.rs  test.rs  tui.rs  validate.rs
crates/routines-core/: Cargo.toml
crates/routines-core/src/: audit.rs  context.rs  error.rs  executor.rs  lib.rs  mcp_config.rs  parser.rs  registry.rs  resolve.rs  server.rs  testing.rs  transform.rs
crates/routines-core/src/executor/: cli.rs  http.rs  mcp.rs  mod.rs  routine.rs  write.rs
crates/routines-daemon/: Cargo.toml
crates/routines-daemon/src/: lib.rs  main.rs  runner.rs
crates/routines-engine/: Cargo.toml
crates/routines-engine/src/: error.rs  lib.rs  mcp_config.rs  parser.rs  resolve.rs  secrets.rs  transform.rs
crates/routines-engine/src/executor/: cli.rs  http.rs  mcp.rs  mod.rs
crates/routines-protocol/: Cargo.toml
crates/routines-protocol/src/: client.rs  codec.rs  lib.rs  types.rs
