[package]
name = "routines-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "routines"
path = "src/main.rs"

[dependencies]
routines-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
inquire = { workspace = true }
