[package]
name = "routines-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
