[package]
name = "routines-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "routinesd"
path = "src/main.rs"

[dependencies]
routines-engine = { workspace = true }
routines-protocol = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
