[package]
name = "routines-daemon"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
routines-engine = { workspace = true }
routines-protocol = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
